add: component structure

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div id="dashboard-window">
   <div id="navbar-container">
-    <div id="logo">LOGO</div>
-    <div id="search">SEARCH</div>
+    <img id="logo" src="assets/logo_sekg_white.png" alt="SEKG Logo">
+    <app-search-bar></app-search-bar>
   </div>
-  <div id="game-window-container"></div>
+  <app-dashboard></app-dashboard>
 </div>
