--- a/client/src/app/app.component.css
+++ b/client/src/app/app.component.css
@@ -1,7 +1,7 @@
 #dashboard-window {
   width: 100%;
   height: 100%;
-  background-color: #a26b6b;
+  background-color: #221e1d;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -17,17 +17,11 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 50px;
-  border: 1px solid white;
+  padding: 0 25px;
   box-sizing: border-box;
 }
 
-#game-window-container {
-  width: 800px;
-  height: 400px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid white;
-
+#logo {
+  width: 100px;
+  text-shadow: 0px 0px 5px black;
 }
