--- a/client/src/app/game-window/game-window.component.html
+++ b/client/src/app/game-window/game-window.component.html
@@ -1,4 +1,4 @@
 <div id="game-window">
-  <app-game-poster></app-game-poster>
-  <app-game-details></app-game-details>
+  <app-game-poster [game]="game"></app-game-poster>
+  <app-game-details [game]="game"></app-game-details>
 </div>
