--- a/client/src/app/game-details/game-details.component.html
+++ b/client/src/app/game-details/game-details.component.html
@@ -1,4 +1,4 @@
 <div id="game-details">
-  <h1 id="game-title">Game Title</h1>
-  <h2 id="game-release-date">Release Date: 00/00/00</h2>
+  <h1 id="game-title">{{ game.title }}</h1>
+  <h2 id="game-release-date">Release Date: {{ game.releaseDate | date: 'dd/MM/yy' }}</h2>
 </div>
