--- a/client/src/app/game-poster/game-poster.component.html
+++ b/client/src/app/game-poster/game-poster.component.html
@@ -1,3 +1,3 @@
 <div id="game-poster">
-  <p id="poster">Poster Image Here</p>
+  <img id="poster" src={{ game.background_image }} alt="Game Poster">
 </div>
