--- a/client/src/app/search-bar/search-bar.component.css
+++ b/client/src/app/search-bar/search-bar.component.css
@@ -11,7 +11,7 @@
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
   background-color: white;
-  color: white;
+  color: black;
   padding: 0 5px;
   font-size: 1rem;
 }
