--- a/client/src/app/search-bar/search-bar.component.html
+++ b/client/src/app/search-bar/search-bar.component.html
@@ -1,4 +1,4 @@
-<form id="form">
+<form id="form" (submit)="onSubmit($event)">
   <input id="search-bar" type="text" placeholder="Search for a game">
   <button id="search-button" type="submit">
     <img id="search-icon" src="../assets/search.svg" alt="Search Icon" />
