add: current game displaying

--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,14 +1,15 @@
 <div id="game-window-container">
-  <img class="arrow-button" src="assets/arrow.svg" alt="Arrow Icon" (click)="decrementIndex()" />
   
   <ng-container *ngIf="(games$ | async) as games">
     <ng-container *ngIf="games.length === 0">
-      <div id="no-games-found-message">Search for games</div>
+      <div id="no-games-message">Search for games</div>
+      <img id="pointer-arrow" src="assets/pointer-arrow.svg" alt="pointer">
     </ng-container>
     <ng-container *ngIf="games.length > 0">
+      <img class="arrow-button" src="assets/arrow.svg" alt="Arrow Icon" (click)="decrementIndex()" />
       <app-game-window [game]="games[currentIndex]"></app-game-window>
+      <img class="arrow-button" src="assets/arrow.svg" alt="Arrow Icon" (click)="incrementIndex()" />
     </ng-container>
   </ng-container>
 
-  <img class="arrow-button" src="assets/arrow.svg" alt="Arrow Icon" (click)="incrementIndex()" />
 </div>
