--- a/client/src/app/game-poster/game-poster.component.html
+++ b/client/src/app/game-poster/game-poster.component.html
@@ -1,3 +1,3 @@
 <div id="game-poster">
-  <img id="poster" src={{ game.background_image }} alt="Game Poster">
+  <img id="poster" [src]="game.background_image" alt="Game Poster">
 </div>
