--- a/client/src/app/dashboard/dashboard.component.css
+++ b/client/src/app/dashboard/dashboard.component.css
@@ -15,3 +15,18 @@
 .arrow-button:first-child {
   transform: rotateY(180deg);
 }
+
+#no-games-message {
+  font-size: 5rem;
+  font-weight: bold;
+  color: white;
+  text-shadow: 0px 0px 5px black;
+  filter: drop-shadow(0 0 0.75rem rgb(42, 41, 41));
+  text-shadow: 0px 0px 5px black;
+  margin-left: 200px;
+}
+
+#pointer-arrow {
+  height: 200px;
+  margin-bottom: 200px;
+}
