--- a/client/src/app/search-bar/search-bar.component.css
+++ b/client/src/app/search-bar/search-bar.component.css
@@ -6,18 +6,21 @@
 }
 
 #search-bar {
+  position: relative;
   width: 200px;
   height: 30px;
   border: 1px solid rgb(0, 0, 0);
   border-radius: 5px;
   background-color: white;
   color: black;
-  padding: 0 5px;
+  padding: 0 30px 0 5px;
   font-size: 1rem;
 }
 
 #search-button {
-  height: 30px;
+  position: absolute;
+  right: 30px;
+  width: 30px;
   border: none;
   background: none;
 }
@@ -27,3 +30,4 @@
   width: 20px;
   cursor: pointer;
 }
+
