--- a/client/src/app/game-poster/game-poster.component.css
+++ b/client/src/app/game-poster/game-poster.component.css
@@ -1,12 +1,15 @@
 #game-poster {
   width: 300px;
+  max-height: 400px;
   border: 1px solid white;
   align-self: flex-start;
 }
 
 #poster {
-  max-height: 100%;
-  width: 100%;;
+  display: block;
+  margin: 0;
+  max-height: 400px;
+  width: 100%;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
